--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rit-mun-nexus</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>MUNSOC RIT - Model United Nations Society</title>
+    <meta name="description" content="Ramaiah Institute of Technology's Model United Nations Society - Fostering global awareness through diplomatic education and leadership development" />
+    <meta name="author" content="MUNSOC RIT" />
 
-    <meta property="og:title" content="rit-mun-nexus" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="MUNSOC RIT - Model United Nations Society" />
+    <meta property="og:description" content="Join Ramaiah Institute of Technology's premier Model United Nations Society. Engage in global dialogue, develop diplomatic skills, and lead meaningful change." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://munsoc-rit.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="MUNSOC RIT - Model United Nations Society" />
+    <meta name="twitter:description" content="Dialogue. Diplomacy. Leadership. - Join RIT's premier MUN society." />
+    
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   </head>
 
   <body>
