--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="twitter:title" content="MUNSOC RIT - Model United Nations Society" />
     <meta name="twitter:description" content="Dialogue. Diplomacy. Leadership. - Join RIT's premier MUN society." />
     
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="https://i.ibb.co/wZs4SvXB/28e42789-83a6-4394-b5a3-83204b5afde8-png.png" />
+    <link rel="apple-touch-icon" href="https://i.ibb.co/wZs4SvXB/28e42789-83a6-4394-b5a3-83204b5afde8-png.png" />
   </head>
 
   <body>
